# opsmap

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yaml  cve-scan.yaml  deploy.yaml
agent/: Cargo.toml
agent/src/: main.rs
agent/src/buffer/: mod.rs
agent/src/config/: mod.rs
agent/src/connection/: mod.rs
agent/src/executor/: mod.rs
agent/src/native_commands/: mod.rs
agent/src/scheduler/: mod.rs
backend/: .env.example  .eslintrc.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/src/: index.ts
backend/src/api/: server.ts
backend/src/api/middleware/: auth.test.ts  auth.ts  error.test.ts  error.ts
backend/src/api/routes/: audit.routes.ts  auth.routes.ts  check-results.routes.test.ts  check-results.routes.ts  components.routes.ts  gateways.routes.ts  gitops.routes.test.ts  gitops.routes.ts  groups.routes.ts  maps.routes.ts  mcp.routes.test.ts  mcp.routes.ts  organizations.routes.ts  permissions.routes.ts  workspaces.routes.ts
backend/src/auth/: jwt.test.ts  jwt.ts  service.test.ts  service.ts
backend/src/config/: config.test.ts  index.ts  logger.ts
backend/src/core/: command-orchestrator.test.ts  command-orchestrator.ts  index.ts  snapshot.service.test.ts  snapshot.service.ts
backend/src/db/: connection.ts  migrate.ts  seed.ts
backend/src/gateway/: command.service.test.ts  command.service.ts  index.ts  manager.test.ts  manager.ts  types.ts
backend/src/gitops/: map-sync.test.ts  map-sync.ts
backend/src/mcp/: server.test.ts  server.ts
backend/src/types/: index.ts
backend/src/websocket/: server.ts
deploy/docker/: Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.gateway  docker-compose.dev.yaml  nginx.conf
deploy/kubernetes/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  postgresql.yaml  redis.yaml  secret.yaml
deploy/openshift/: buildconfig.yaml  imagestream.yaml  route.yaml  scc.yaml
docs/: api-reference.md  opsmap-specification-v3.md  quickstart.md  use-case-trading-platform.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  map-view.spec.ts  permissions.spec.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  jobs.ts  maps.ts
frontend/src/hooks/: use-websocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  MapViewPage.tsx
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/src/agent_server/: mod.rs
gateway/src/backend_client/: mod.rs
gateway/src/registry/: mod.rs
gateway/src/router/: mod.rs
scripts/: init-project.sh
scripts/pki/: generate-certs.sh
(+24 files in other folders)
