[package]
name = "opsmap-agent"
version = "0.1.0"
edition = "2021"
authors = ["OpsMap Team"]
description = "OpsMap Agent - Lightweight monitoring and control agent"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client (fallback)
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS/mTLS
native-tls = "0.2"
tokio-native-tls = "0.3"

# System info
sysinfo = "0.30"

# Process management
nix = { version = "0.27", features = ["process", "signal", "fs"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Hostname
hostname = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols
